upd.. toggle-btn

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <section class="main">
     <header>
         <h1>EVENT...</h1>
-        <nav>
+        <nav >
             <a href="#">HOME</a>
             <a href="#">ABOUT</a>
             <a href="#">SERVICES</a>
@@ -20,7 +20,7 @@
     <div class="main_head padding">
         <div class="main_c1">
             <h2>Web Developer<br>Conference<span class="pink">2020</span></h2>
-            <p class="about_h2">LOrem Ipsum has been the industry's standard dummy text ever since 
+            <p class="about_h2">Lorem Ipsum has been the industry's standard dummy text ever since 
                 the 1500s, when an unknown printer took a galley of type and
                 scrambled it to make a type specimen book.
             </p>
@@ -48,28 +48,37 @@
     <h4>Why You Should Join</h4>
     <div class="join-column">
         <div class="join_c1">
+        	<fieldset>
+        		<legend>1</legend>
             <h5>Network</h5>
             <p class="about-h5">Lorem Ipsum has been the industry's standard
                 dummy text ever since the 1500s, when an
                 unknown printer took a galley of type and
                 scrambled it to make a type specimen book.
             </p>
+            </fieldset>
         </div>
         <div class="join_c1">
+        	<fieldset>
+        		<legend>2</legend>
             <h5>Great Speaker</h5>
             <p class="about-h5">Lorem Ipsum has been the industry's standard
                 dummy text ever since the 1500s, when an
                 unknown printer took a galley of type and
                 scrambled it to make a type specimen book.
             </p>
+        	</fieldset>
         </div>
         <div class="join_c1">
+        	<fieldset>
+        		<legend>3</legend>
             <h5>Information</h5>
             <p class="about-h5">Lorem Ipsum has been the industry's standard
                 dummy text ever since the 1500s, when an
                 unknown printer took a galley of type and
                 scrambled it to make a type specimen book.
             </p>
+            </fieldset>
         </div>
     </div>
 </section>
@@ -213,6 +222,23 @@
             <a href="#">Read More</a>
         </div>
     </div>
+</section>
+<section class="padding sec-last">
+	<div class="sec-last-column">
+		<div class="sec-last-c1">
+			 <h1>EVENT...</h1>
+		</div>
+		<div class="sec-last-c1">
+			<p class="about-quick-links">Quick links</p>
+			<a href="#">Program</a>
+			<a href="#">About Us</a>
+			<a href="#">Contact Us</a>
+			<a href="#">Services</a>
+		</div>
+<!-- 		<div class="sec-last-c1">
+			<p>Follow Us</p>
+		</div> -->
+	</div>
 </section>
 <footer>
     <p>&copy Event..... Services Pvt Ltd, 2018-Present</p>
