--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
             <a href="#">CONTACT</a>
             <button class="join-btn">Join Us</button>
         </nav>
+        <div class="toggle-btn">
+            <div class="toggle"></div>
+            <div class="toggle"></div>
+            <div class="toggle"></div>
+        </div>    
     </header>
     <div class="main_head padding">
         <div class="main_c1">
